[package]
name = "epok"
description = "External port operator for Kubernetes"
authors = ["Rareș <rares@getbetter.ro>"]
version = "0.9.3"
edition = "2021"
publish = ["getbetter"]

[[bin]]
name = "epok"
path = "src/main.rs"

[[bin]]
name = "epok-clean"
path = "src/bin/cleanup.rs"

[dependencies]
anyhow = "1.0.86"
backoff = "0.4.0"
clap = { version = "4.5.6", features = ["cargo", "derive", "env"] }
cmd_lib = "1.9.4"
enum_dispatch = "0.3.13"
futures = "0.3.30"
itertools = "0.13.0"
k8s-openapi = { version = "0.22.0", features = ["schemars", "v1_24"] }
kube = { version = "0.91.0", default-features = false, features = ["client", "openssl-tls", "runtime"] }
lazy_static = "1.5.0"
pin-project = "1.1.5"
sha256 = "1.5.0"
thiserror = "1.0.61"
tokio = { version = "1.38.0", features = ["full", "test-util"] }
tokio-stream = "0.1.15"
tracing = { version = "0.1.40", default-features = false, features = ["std"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[dev-dependencies]
quickcheck = { version = "1.0.3", default-features = false }

[profile.release]
debug = 1
incremental = true
lto = "off"
